--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,18 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "keymirror": "^0.1.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-immutable-state-invariant": "^2.1.0"
   }
 }
